// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SolutionDisplay /> Matches the current snapshot 1`] = `
<styled.div
  id="solution-display"
>
  <Component
    loading={false}
    maxMoves={10}
    solution={null}
  />
</styled.div>
`;

exports[`<SolutionDisplay /> Matches the current snapshot when a solution is present 1`] = `
<styled.div
  id="solution-display"
>
  <Component
    loading={false}
    maxMoves={null}
    solution={
      Array [
        "UP",
        "DOWN",
      ]
    }
  />
</styled.div>
`;
